WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55460
[EFL] New mediaControl css file for EFL
https://bugs.webkit.org/show_bug.cgi?id=55460
Summary
[EFL] New mediaControl css file for EFL
Gyuyoung Kim
Reported
2011-03-01 05:03:26 PST
We need to make new mediaControl file for EFL port. Layout of media controller is decided by the mediaControl file. So, I make it referencing to mediaControls.css.
Attachments
Proposed Patch
(9.95 KB, patch)
2011-03-01 05:07 PST
,
Gyuyoung Kim
kenneth
: review+
gyuyoung.kim
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.03 KB, patch)
2011-03-09 17:27 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-03-01 05:07:19 PST
Created
attachment 84216
[details]
Proposed Patch
Lucas De Marchi
Comment 2
2011-03-02 03:52:35 PST
Comment on
attachment 84216
[details]
Proposed Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=84216&action=review
> Source/WebCore/CMakeLists.txt:1544 > SET(WebCore_USER_AGENT_STYLE_SHEETS > ${WEBCORE_DIR}/css/html.css > ${WEBCORE_DIR}/css/mathml.css > ${WEBCORE_DIR}/css/mediaControls.css > - ${WEBCORE_DIR}/css/mediaControlsGtk.css > + ${WEBCORE_DIR}/css/mediaControlsEfl.css
Shouldn't this be part of WebCore/CMakeListsEfl.txt?
Gyuyoung Kim
Comment 3
2011-03-02 18:11:00 PST
(In reply to
comment #2
)
> (From update of
attachment 84216
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=84216&action=review
> > > Source/WebCore/CMakeLists.txt:1544 > > SET(WebCore_USER_AGENT_STYLE_SHEETS > > ${WEBCORE_DIR}/css/html.css > > ${WEBCORE_DIR}/css/mathml.css > > ${WEBCORE_DIR}/css/mediaControls.css > > - ${WEBCORE_DIR}/css/mediaControlsGtk.css > > + ${WEBCORE_DIR}/css/mediaControlsEfl.css > > Shouldn't this be part of WebCore/CMakeListsEfl.txt?
If I move it to CMakeListEfl.txt, the UserAgentStyleSheets.h file doesn't include "mediaControlsEflUserAgentStyleSheet" used by RenderThemeEfl.cpp. Because, CMakeLists.txt generates the UserAgentStyleSheets.h, UserAgentStyleSheets.h can't include mediaControlsEfl.css. CMakeLists.h ... 2204 # Generate user agent styles 2205 ADD_CUSTOM_COMMAND( 2206 OUTPUT ${DERIVED_SOURCES_DIR}/UserAgentStyleSheetsData.cpp ${DERIVED_SOURCES_DIR}/UserAgentStyleSheets.h 2207 MAIN_DEPENDENCY ${WEBCORE_DIR}/css/make-css-file-arrays.pl 2208 DEPENDS ${WebCore_USER_AGENT_STYLE_SHEETS} 2209 COMMAND ${PERL_EXECUTABLE} ${WEBCORE_DIR}/css/make-css-file-arrays.pl ${DERIVED_SOURCES_DIR}/UserAgentStyleSheets.h ${DERIVED_SOURCES_DIR}/UserAgentStyleSheetsData.cpp ${WebCo re_USER_AGENT_STYLE_SHEETS} 2210 VERBATIM) 2211 LIST(APPEND WebCore_SOURCES ${DERIVED_SOURCES_DIR}/UserAgentStyleSheetsData.cpp) 2212 ADD_SOURCE_DERIVED_DEPENDENCIES(${WEBCORE_DIR}/css/CSSStyleSelector.cpp UserAgentStyleSheetsData.cpp UserAgentStyleSheets.h) 2213
Gyuyoung Kim
Comment 4
2011-03-02 18:31:10 PST
(In reply to
comment #3
)
> > CMakeLists.h
Oops. I mean CMakeLists.txt file.
Gyuyoung Kim
Comment 5
2011-03-03 17:13:46 PST
I need this patch to add media control UI. WebKit EFL doesn't display any media control buttons now. Please review this patch.
WebKit Commit Bot
Comment 6
2011-03-09 11:02:13 PST
Comment on
attachment 84216
[details]
Proposed Patch Rejecting
attachment 84216
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-8', 'apply-..." exit_code: 1 Last 500 characters of output: rks/Python.framework/Versions/2.6/lib/python2.6/urllib2.py", line 361, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 756, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 706, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output:
http://queues.webkit.org/results/8110932
Eric Seidel (no email)
Comment 7
2011-03-09 11:05:52 PST
Comment on
attachment 84216
[details]
Proposed Patch This is the second time we've seen bugzilla attachment fetching time out in the last 24 hours. Perhaps Bill has been restarting servers? Obviously we could make webkit-patch more robust against this type of failure (And probably should!)
Gyuyoung Kim
Comment 8
2011-03-09 16:52:36 PST
Comment on
attachment 84216
[details]
Proposed Patch Changelog is wrong.
Gyuyoung Kim
Comment 9
2011-03-09 17:27:20 PST
Created
attachment 85264
[details]
Patch
WebKit Commit Bot
Comment 10
2011-03-10 20:31:39 PST
Comment on
attachment 85264
[details]
Patch Clearing flags on attachment: 85264 Committed
r80809
: <
http://trac.webkit.org/changeset/80809
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug